<resources>
    <string name="app_name">Unsoed Mobile</string>
    <string name="welcome_text">Selamat Datang di Prodi Informatika, \nFakultas Teknik, \n Universitas Jenderal Soedirman</string>
    <string name="inf_description">Program Studi Informatika di Universitas Jenderal Soedirman (Unsoed)berdiri pada tahun 2008, berawal dari kebutuhan yang semakin mendesakakan tenaga ahli di bidang teknologi informasi dan komunikasi. Saat itu,perkembangan teknologi yang pesat di Indonesia dan dunia memerlukanadanya program pendidikan tinggi yang mampu mencetak lulusan dengankompetensi tinggi di bidang informatika. \nPada tahun tersebut, FakultasSains dan Teknik (FST) Unsoed mengambil inisiatif untuk mendirikanProgram Studi Informatika. Pembentukan program studi ini bertujuan untukmemenuhi tuntutan masyarakat dan industri yang membutuhkan tenagaprofesional dalam bidang teknologi informasi. Kurikulum yang disusundirancang untuk memberikan pendidikan berkualitas, menggabungkan aspekpraktis dan teoritis dari informatika, seperti pemrograman, sisteminformasi, jaringan komputer, dan kecerdasan buatan.</string>
    <string name="next">Selanjutnya</string>
    <string name="alamat">Raya Mayjen Sungkono km 5, Dusun 2, Blater, Kec. Kalimanah, Kabupaten Purbalingga, Jawa Tengah 53371</string>
    <string name="lokasi">https://maps.app.goo.gl/SX6c8emV88dvuWxV9</string>
    <string name="telepon">(0281) 6596700</string>
    <string name="email">teknik@unsoed.ac.id</string>
    <string name="himpunan">Himpunan Mahasiswa Informatika (HMIF UNSOED)</string>
    <string name="ig_himpunan">https://www.instagram.com/hmifunsoed</string>
    <string name="profil_lulusan">Profil Lulusan</string>
    <string name="desc_lulusan">Lulusan Program Studi Informatika Unsoed sebagian besar bekerja sebagai tenaga ahli di bidang perekayasaan perangkat lunak (Programer, Analis Sistem, Manajer Proyek, Database Administrator), Wirausahawan Informatika dan Dosen/Peneliti.</string>
    <string name="back">Kembali</string>
    <string name="book_list">Koleksi Buku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>