<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/gedung_teknik"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/gedung_teknik"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        />
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        style="@style/MaterialAlertDialog.Material3.Body.Text"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inf_description"
        android:justificationMode="inter_word"
        android:layout_marginTop="8dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_page_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="end"
        app:backgroundTint="@color/colorPrimary"
        />
</LinearLayout>