<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Halaman2Activity">

    <!-- Gambar Header -->
    <ImageView
        android:id="@+id/iv_gedung_teknik"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/teknik_unsoed_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="16:9" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/iv_logo_unsoed"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/lambang_unsoed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_gedung_teknik"
        app:layout_constraintEnd_toEndOf="@id/iv_gedung_teknik"
        app:layout_constraintBottom_toBottomOf="@id/iv_gedung_teknik" />

    <!-- Judul -->
    <TextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorSecondary"
        android:text="@string/profil_lulusan"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_unsoed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ScrollView untuk isi -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- CardView -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="@color/material_dynamic_primary90"
                app:cardCornerRadius="8dp">
                <!-- Deskripsi Lulusan -->
                <TextView
                    android:id="@+id/tv_lulusan"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:padding="8dp"
                    android:text="@string/desc_lulusan"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Menu Profil -->
                    <LinearLayout
                        android:id="@+id/linear_layout_profil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="12dp">

                        <include
                            android:id="@+id/layout_phone"
                            layout="@layout/layout_menu" />

                        <include
                            android:id="@+id/layout_email"
                            layout="@layout/layout_menu" />

                        <include
                            android:id="@+id/layout_location"
                            layout="@layout/layout_menu" />

                        <include
                            android:id="@+id/layout_ig"
                            layout="@layout/layout_menu" />
                    </LinearLayout>

                    <!-- Tombol Back -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/back"
                        android:textColor="@color/white" />

                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
